--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,28 @@
 image: itomaldonado/python:2.7.9
+env:
+    - REPO_NAME=`echo $DRONE_BUILD_DIR| cut -d'/' -f 8`
 script:
-    - env
-    - pip install -r requirements.txt --use-mirrors
+    - pip install -q -r requirements.txt
     - python -m py_compile app.py
     - python -m unittest discover ./test/
+publish:
+    docker:
+        image_name: $$username/$REPO_NAME
+        docker_host: $$docker_host
+        docker_version: 1.5.0
+        registry_login: $$registry_login
+        username: $$username
+        password: $$password
+        email: $$email
+        tag: latest
+        branch: master
+        keep_builds: false
+deploy:
+    bash:
+        script:
+        - chmod 777 ./deploy/deploy.sh
+        - ./deploy/deploy.sh
 notify:
     email:
         recipients:
-            - manuel.maldonado@verizon.com
+            - $$email
