Added a dockerfile to build the image before deployment

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ publish:
         username: $$username
         password: $$password
         email: $$email
+        tag: latest
         branch: master
         keep_builds: false
 deploy:
