Pushing latest tag while building docker publish. .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,7 @@ publish:
         email: $$email
         branch: master
         push_latest: true
+        tag: latest
         keep_builds: false
 deploy:
     bash:
